# Rendering-Engine

./: .gitignore  CMakeLists.txt  config.h.in
Textures/: container_emission.tga  face.tga  grass.tga  window.tga
include/: setup.h
include/FileLoader/: fileLoader.cpp  fileLoader.h
include/Lights/: directionLight.cpp  directionLight.h  lightManager.cpp  lightManager.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
include/ModelLoader/: mesh.cpp  mesh.h  model.cpp  model.h
include/Objects/: cube.cpp  cube.h  plane.cpp  plane.h  renderable.cpp  renderable.h  renderableManager.cpp  renderableManager.h
include/PostProcessing/: screen.cpp  screen.h
include/Shader/: shader.cpp  shader.h
include/SharedVAO/: sharedData.cpp  sharedData.h
include/Skybox/: skybox.cpp  skybox.h
include/TGA/: tgaLoader.cpp  tgaLoader.h
include/camera/: flyCam.cpp  flyCam.h
shaders/: blackWhiteFragment.glsl  bloomBlurFragment.glsl  bloomFragment.glsl  blurFragment.glsl  defaultCubeFragment.glsl  defaultCubeVertex.glsl  inversionFragment.glsl  lightFragment.glsl  lightVertex.glsl  screenFragment.glsl  sharpenFragment.glsl  skyboxFragment.glsl  skyboxVertex.glsl
src/: engine.cpp
